# mysql-mimic

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: auth_clear_password.py  auth_native_password.py  dbapi_proxy.py  dbapi_proxy_streaming.py  mysql_clear_password.py  mysql_cli.py  mysql_native_password.py  simple.py  streaming_results.py
integration/: run.py
integration/mysql-connector-j/: Makefile  pom.xml
integration/mysql-connector-j/src/test/java/com/mysql_mimic/integration/: IntegrationTest.java
mypyprox/: constants.py  server.py  types.py  version.py
mysql_mimic/: __init__.py  admin.py  auth.py  charset.py  connection.py  constants.py  context.py  control.py  errors.py  intercept.py  packets.py  prepared.py  result.py  results.py  schema.py  server.py  session.py  stream.py  types.py  utils.py  variables.py  version.py
tests/: conftest.py  test_admin.py  test_auth.py  test_connection.py  test_control.py  test_integration.py  test_query.py  test_result.py  test_server.py  test_session.py  test_ssl.py  test_stream.py  test_types.py  test_variables.py  test_version.py
tests/fixtures/: certificate.pem  key.pem  queries.py
