[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

#[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "DEBUG"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ['build']
